--- a/src/app/shared/presentation/styles/_reset.scss
+++ b/src/app/shared/presentation/styles/_reset.scss
@@ -121,8 +121,8 @@ svg {
 }
 
 body {
-    color: var(--base, white);
-    background-color: var(--white, #18181A);
+    color: white;
+    background-color: var(--base, #18181A);
     min-height: 100vh;
     font-size: 100%;
     // font-family: var(--font-primary);
