--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,118 @@
 @use "./app/shared/presentation/styles/reset";
+@use "./app/shared/presentation/styles/settings";
+
+@font-face {
+    font-family: 'icomoon';
+    src: url('/fonts/icomoon.eot?9qcik5');
+    src: url('/fonts/icomoon.eot?9qcik5#iefix') format('embedded-opentype'),
+        url('/fonts/icomoon.ttf?9qcik5') format('truetype'),
+        url('/fonts/icomoon.woff?9qcik5') format('woff'),
+        url('/fonts/icomoon.svg?9qcik5#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+
+[class^="icon-"],
+[class*="icon-"] {
+    font-family: 'icomoon' !important;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+[class*="icon-"]::before {
+    font-size: 1.5rem;
+}
+
+.icon-dots:before {
+    content: "\e907";
+}
+
+.icon-menu:before {
+    content: "\e902";
+}
+
+.icon-close:before {
+    content: "\e900";
+}
+
+.icon-comment:before {
+    content: "\e901";
+}
+
+.icon-search:before {
+    content: "\e903";
+}
+
+.icon-add:before {
+    content: "\e904";
+}
+
+.icon-attach:before {
+    content: "\e905";
+}
+
+.icon-back:before {
+    content: "\e906";
+}
+
+.icon-edit:before {
+    content: "\e908";
+}
+
+.icon-trash:before {
+    content: "\e909";
+}
+
+.navbar {
+    padding: 0 1rem;
+    height: 3.5rem;
+    background-color: #18181A;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .75rem;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    border-bottom: thin solid var(--gray-70, #4E4E4E);
+}
+
+.search-bar {
+    min-width: 8.5rem;
+    width: 100%;
+    padding: 0 var(--sm) 0 3rem;
+    border-radius: var(--xxl);
+    outline: none;
+    height: 2.5rem;
+    background: var(--constrast, #272727);
+
+    &::placeholder {
+        color: var(--gray);
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+    }
+
+    &:placeholder-shown {
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+    }
+
+    &__wrapper {
+        max-width: 54rem;
+        position: relative;
+    }
+
+    &__icon {
+        position: absolute;
+        top: 24%;
+        left: var(--sm);
+    }
+}
