feat: add profile page

--- a/src/app/shared/presentation/styles/_reset.scss
+++ b/src/app/shared/presentation/styles/_reset.scss
@@ -121,6 +121,7 @@ svg {
 }
 
 body {
+    font-family: 'LexendDeca';
     color: white;
     background-color: var(--base, #18181A);
     min-height: 100vh;
