--- a/src/app/posts/presentation/ui/PostCard/_index.scss
+++ b/src/app/posts/presentation/ui/PostCard/_index.scss
@@ -2,15 +2,41 @@
     display: flex;
     flex-direction: column;
     gap: .5rem;
-    padding: 1rem;
+    padding: 1rem .825rem .5rem;
     max-width: 41.375rem;
     min-width: 22.5rem;
     background-color: #18181A;
     color: white;
     border-bottom: thin solid #4E4E4E;
+    
     &__autor {
         display: flex;
         gap: .75rem;
         align-items: center;
+    }
+
+    &__media {
+        aspect-ratio: 16/9;
+    }
+
+    &__icon::before {
+        font-size: var(--lg);
+    }
+
+    &__text {
+        font-size: var(--sm);
+    }
+
+    &__header {
+        display: flex;
+        gap: 2rem;
+        justify-content: space-between;
+    }
+
+    &__content {
+        font-family: 'LexendDecaLight';
+        font-size: 14px;
+        color: var(--gray);
+        font-weight: 100;
     }
 }
