--- a/src/app/shared/presentation/pages/App.layout.scss
+++ b/src/app/shared/presentation/pages/App.layout.scss
@@ -1,6 +1,6 @@
-.app {
+.app-content {
+    padding-top: 3.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 3.5rem 1rem;
 }
