--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,27 @@
 @use "./app/shared/presentation/styles/settings";
 
 @font-face {
+    font-family: 'LexendDeca';
+    src: url('/fonts/LexendDeca-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'LexendDecaMedium';
+    src: url('/fonts/LexendDeca-Medium.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'LexendDecaLight';
+    src: url('/fonts/LexendDeca-Light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
     font-family: 'icomoon';
     src: url('/fonts/icomoon.eot?9qcik5');
     src: url('/fonts/icomoon.eot?9qcik5#iefix') format('embedded-opentype'),
@@ -67,52 +88,4 @@
 
 .icon-trash:before {
     content: "\e909";
-}
-
-.navbar {
-    padding: 0 1rem;
-    height: 3.5rem;
-    background-color: #18181A;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: .75rem;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    border-bottom: thin solid var(--gray-70, #4E4E4E);
-}
-
-.search-bar {
-    min-width: 8.5rem;
-    width: 100%;
-    padding: 0 var(--sm) 0 3rem;
-    border-radius: var(--xxl);
-    outline: none;
-    height: 2.5rem;
-    background: var(--constrast, #272727);
-
-    &::placeholder {
-        color: var(--gray);
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
-    }
-
-    &:placeholder-shown {
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
-    }
-
-    &__wrapper {
-        max-width: 54rem;
-        position: relative;
-    }
-
-    &__icon {
-        position: absolute;
-        top: 24%;
-        left: var(--sm);
-    }
 }
