--- a/src/app/posts/pages/submit/submit.component.html
+++ b/src/app/posts/pages/submit/submit.component.html
@@ -1,15 +1,11 @@
-<nav>
-  <div class="navbar__left-action">
-    <span class="icon-close"></span>
-    <h1>Create Post</h1>
-  </div>
-  <filled-button type="submit" [isMini]="true" [onClick]="onSubmit">
-    Publish
-  </filled-button>
-</nav>
+<header-section
+  headerName="Create Post"
+  actionName="Publish"
+  [action]="onSubmit"
+/>
 <main class="app-container">
   <form class="post-form" [formGroup]="createPostForm">
-    <input type="text" placeholder="Title" formControlName="title" />
-    <textarea  formControlName="content" placeholder="body text (optional)"></textarea>
+    <text-field [control]="createPostForm.controls.title" />
+    <text-box [control]="createPostForm.controls.content" />
   </form>
 </main>
