--- a/src/app/posts/pages/submit/submit.component.scss
+++ b/src/app/posts/pages/submit/submit.component.scss
@@ -4,41 +4,12 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-
-  & input {
-    height: 48px;
-    background: var(--contrast);
-    padding: 1rem;
-    border-radius: 0.5rem;
-  }
-
-  & textarea {
-    min-height: 8rem;
-    background: var(--contrast);
-    padding: 1rem;
-    border-radius: 0.5rem;
-  }
-}
-
-nav {
-  background: var(--base);
-  padding: 1rem;
-  position: fixed;
-  top: 0;
-  border-bottom: thin solid var(--gray-50);
-  height: 56px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 0.825rem;
-
-  & .navbar__left-action {
-    display: flex;
-    gap: 1rem;
-  }
+  max-width: 50rem;
 }
 
 .app-container {
   padding-top: 3.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
