--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -2,7 +2,7 @@
     --mc: 0.5rem;
     --sm: 0.75rem;
     --ms: 0.875rem;
-    --md: 1rem; 
+    --md: 1rem;
     --lg: 1.275rem;
     --xl: 1.5rem;
     --xxl: 2rem;
@@ -12,4 +12,6 @@
     --gray-50: #4E4E4E;
     --gray-70: #434643;
     --primary: #1B5FC6;
+    --font-300: 'LexendDecaLight';
+    --font-600: 'LexendDecaSemiBold';
   }
