--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,6 +16,13 @@
 }
 
 @font-face {
+    font-family: 'LexendDecaSemiBold';
+    src: url('/fonts/LexendDeca-SemiBold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
     font-family: 'LexendDecaLight';
     src: url('/fonts/LexendDeca-Light.ttf') format('truetype');
     font-weight: normal;
