--- a/src/app/core/components/buttons/filled-button/filled-button.component.scss
+++ b/src/app/core/components/buttons/filled-button/filled-button.component.scss
@@ -3,12 +3,17 @@
     padding: 0 .75rem;
     display: flex;
     align-items: center;
+    justify-content: center;
     border-radius: 2rem;
     gap: .25rem;
-    height: 3.25rem;
+    height: 3rem;
     background: var(--primary, #1B5FC6);
 
     &--mini {
         height: 2.25rem;
+    }
+
+    &--full {
+      width: 100%;
     }
 }
