--- a/src/app/auth/pages/sign-up/sign-up.component.html
+++ b/src/app/auth/pages/sign-up/sign-up.component.html
@@ -12,7 +12,7 @@
       [control]="formGroup.controls.password"
       placeholder="Password"
     />
-    <filled-button type="submit" [isFullWidth]="true"> Sign Up</filled-button>
+    <filled-button [onClick]="signUp" type="submit" [isFullWidth]="true"> Sign Up</filled-button>
   </form>
   <a routerLink="/auth/sign-in" class="sign-in__link">
     <span>Alredy have an account? Sign In</span>
