--- a/src/app/core/components/navigators/navbar/navbar.component.html
+++ b/src/app/core/components/navigators/navbar/navbar.component.html
@@ -5,6 +5,7 @@
   </filled-link-button>
   <a routerLink="/account">
     <avatar
+      [size]="36"
       avatar="https://citizensketcher.com/wp-content/uploads/2022/05/thispersondoesnotexist_43-1.jpg"
       username="Adrian Mis"
     />
