--- a/src/app/posts/components/post-card/post-card.component.scss
+++ b/src/app/posts/components/post-card/post-card.component.scss
@@ -37,4 +37,9 @@
         color: var(--gray);
         font-weight: 100;
     }
+
+    &__avatar-wrapper {
+      width: 2rem;
+      height: 2rem;
+    }
 }
