--- a/src/app/core/components/navigators/navbar/navbar.component.scss
+++ b/src/app/core/components/navigators/navbar/navbar.component.scss
@@ -1,13 +1,13 @@
 .navbar {
-    padding: 0 .5rem;
-    height: 3.5rem;
-    background-color: #18181A;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: .75rem;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    border-bottom: thin solid var(--gray-50, #4E4E4E);
+  padding: 0 0.5rem;
+  height: 3.5rem;
+  background-color: #18181a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.75rem;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  border-bottom: thin solid var(--gray-50, #4e4e4e);
 }
