--- a/src/app/core/pages/home/home.component.scss
+++ b/src/app/core/pages/home/home.component.scss
@@ -1,6 +1,7 @@
 .app-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  max-width: 50rem;
+  margin: auto;
   padding-top: 3.5rem;
 }
