feat: add comments store

--- a/src/app/core/components/navigators/navbar/navbar.component.html
+++ b/src/app/core/components/navigators/navbar/navbar.component.html
@@ -4,10 +4,17 @@
     Create <span class="icon-add"></span>
   </filled-link-button>
   <a routerLink="/account">
+    @if (!accountStore.getState().isLoading) {
     <avatar
       [size]="36"
-      avatar="https://citizensketcher.com/wp-content/uploads/2022/05/thispersondoesnotexist_43-1.jpg"
-      username="Adrian Mis"
+      [avatar]="accountStore.getState().item?.avatar"
+      [username]="accountStore.getState().item?.username!"
     />
+    } @else {
+    <!-- todo: create skeleton -->
+    <div
+      style="height: 36px; width: 36px; background-color: rgb(53, 55, 57); border-radius: 100%"
+    ></div>
+    }
   </a>
 </nav>
